# yaru

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
yaru/: Cargo.toml
yaru-core/: Cargo.toml
yaru/src/: config.rs  main.rs
yaru/src/auth/: github.rs  mod.rs
yaru/src/cli/: mod.rs
yaru/src/cli/login/: mod.rs  oauth.rs
yarud/: Cargo.toml
